--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -9,7 +9,7 @@
 }
 
 body {
-  background-color: #f7f7f7;
+  background-color: rgb(172, 218, 224);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -21,8 +21,12 @@ body {
 }
 
 .container {
+  background: #f7f7f7;
   margin: 30px auto;
   width: 400px;
+  padding: 10px 50px 10px 50px;
+  border-radius: 10px;
+  box-shadow: 0px 20px 20px 0px rgba(146, 146, 146, 0.5);
 }
 
 h1 {
@@ -39,6 +43,10 @@ h3 {
 h4 {
   margin: 0;
   text-transform: uppercase;
+}
+
+h2{
+  margin-bottom: 50px;
 }
 
 .inc-exp-container {
@@ -99,11 +107,17 @@ input[type='number'] {
   margin: 10px 0 30px;
   padding: 10px;
   width: 100%;
+  transition: all ease 0.2s;
 }
 
 .btn:focus,
 .delete-btn:focus {
   outline: 0;
+}
+
+form .btn:hover {
+  transform: translateY(-5px);
+  box-shadow: 0px 10px 20px 2px rgba(0, 0, 0, 0.25);
 }
 
 .list {
